# engeom

./: .gitignore  Cargo.toml  README.md  mkdocs.yml
.github/workflows/: CI.yml
Writerside/: hi.tree  redirection-rules.xml
Writerside/topics/: Airfoils.md  Common-Constructs.md  Overview.md
book/: book.toml
book/src/: SUMMARY.md  chapter_1.md  chapter_2.md  chapter_3.md  chapter_4.md  chapter_6.md
docs/: index.md
docs/common/: core_space.md
engeom/: Cargo.toml
engeom/benches/: bench.rs  convolution.rs  down_sample.rs  index_mask.rs
engeom/src/: airfoil.rs  common.rs  geom2.rs  geom3.rs  io.rs  lib.rs  raster2.rs  raster3.rs  (+3 more)
py-engeom/: Cargo.toml
py-engeom/examples/: _common.py  align_points_to_mesh.py  align_points_to_mesh_constrained.py  display_mesh.py
py-engeom/python/engeom/: align.pyi  align3.pyi  common.pyi  geom2.pyi  geom3.pyi  raster2.pyi  sensors.pyi
py-engeom/python/engeom/_plot/: matplotlib.py  pyvista.py
py-engeom/python/engeom/align3/: __init__.py
py-engeom/python/engeom/common/: __init__.py
py-engeom/python/engeom/raster2/: __init__.py
py-engeom/python/tests/: test_common.py  test_geom2_primitives.py  test_geom3_basic.py  test_geom3_primitives.py  test_mesh.py  test_pickle.py
py-engeom/src/: airfoil.rs  align3.rs  alignments.rs  bounding.rs  common.rs  conversions.rs  geom2.rs  geom3.rs  lib.rs  mesh.rs  point_cloud.rs  raster.rs  raster2.rs  ray_casting.rs  sensors.rs  svd_basis.rs
src/: airfoil.rs  common.rs  errors.rs  func1.rs  geom2.rs  geom3.rs  io.rs  lib.rs  metrology.rs  utility.rs
utilities/: Cargo.toml
(+153 files in other folders)
