[workspace]
resolver = "3"
members = ["engeom", "py-engeom"]

[workspace.package]
version = "0.2.18"
edition = "2024"

[workspace.dependencies]
parry3d-f64 = { version = "0.25.1", features = ["serde-serialize"] }
parry2d-f64 = { version = "0.25.1", features = ["serde-serialize"] }
rand = "0.9.1"
rayon = "1.11.0"
uuid = "1.18.0"
