[package]
name = "py-engeom"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "engeom"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.1", features = ["abi3-py38", "extension-module"] }
numpy = "0.28.0"
engeom = { path = "../engeom", features = ["stl", "ply"] }
parry3d-f64 = { workspace = true, features = ["serde-serialize"] }
parry2d-f64 = { workspace = true, features = ["serde-serialize"] }
rmp-serde = "1.3.0"
uuid = { workspace = true }

